<resources>
    <string name="app_name">Fruit Seller</string>

    <!--  Login Activity  -->
    <string name="login_hint_username">Username / Email Address</string>
    <string name="login_hint_password">Password</string>
    <string name="login_btn_label_login">Login</string>
    <string name="login_btn_create_new_account">Create New Account</string>
    <string name="login_btn_forgot_password">Forgot Password?</string>

    <!--  Register Activity  -->
    <string name="register_hint_username">Username</string>
    <string name="register_hint_email">Email Address</string>
    <string name="register_hint_password">Password</string>
    <string name="register_btn_label_register">Register</string>
    <string name="register_btn_have_account">Already have account? Login Here</string>
</resources>
