<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/register_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/register_container_padding">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/register_logo"
                android:layout_height="@dimen/register_logo"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo"
                app:layout_constraintBottom_toTopOf="@+id/edt_username"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/edt_username"
                style="@style/AuthEditText"
                android:layout_marginTop="@dimen/register_edt_username_margin_top"
                android:hint="@string/register_hint_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/edt_email"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_logo" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/AuthEditText"
                android:layout_marginTop="@dimen/register_edt_email_margin_top"
                android:hint="@string/register_hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/edt_password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_username" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/AuthEditText"
                android:layout_marginTop="@dimen/register_edt_password_margin_top"
                android:hint="@string/register_hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/btn_register"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_btn_register_margin_top"
                android:text="@string/register_btn_label_register"
                app:layout_constraintBottom_toTopOf="@id/btn_have_account"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_have_account"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_btn_have_account_margin_top"
                android:text="@string/register_btn_have_account"
                android:textAllCaps="false"
                android:textColor="@color/link_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register"
                app:rippleColor="@color/faint_grey" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>