<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/login_scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_container_padding">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="@dimen/login_logo"
                android:layout_height="@dimen/login_logo"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo"
                app:layout_constraintBottom_toTopOf="@+id/edt_username"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/edt_username"
                style="@style/AuthEditText"
                android:layout_marginTop="@dimen/login_edt_username_margin_top"
                android:hint="@string/login_hint_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                app:layout_constraintBottom_toTopOf="@+id/edt_password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_logo" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/AuthEditText"
                android:layout_marginTop="@dimen/login_edt_password_margin_top"
                android:hint="@string/login_hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/btn_forgot_password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_username" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_forgot_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_btn_forgot_password_margin_top"
                android:text="@string/login_btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/link_button"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"
                app:layout_constraintEnd_toStartOf="@+id/btn_create_new_account"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                app:rippleColor="@color/faint_grey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_new_account"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_create_new_account"
                android:textAllCaps="false"
                android:textColor="@color/link_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_forgot_password"
                app:layout_constraintTop_toTopOf="@id/btn_forgot_password"
                app:rippleColor="@color/faint_grey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_btn_login_margin_top"
                android:text="@string/login_btn_label_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_forgot_password"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>